tests/error/appendByteString.uplc
(program 0.0.0 [ [(builtin appendByteString) (con integer 12646)] (con unit ()) ])
